tests/errors/annotation_violation.experr
argument 'x' must be Integer, got String
